tests/build/cases/ui_node/invalid_args.stderr
error: expected `child`, `children`, `delegate`, or, `delegate_list`
 --> cases/ui_node/invalid_args.rs:4:11
  |
4 | #[ui_node(invalid_arg)]
  |           ^^^^^^^^^^^

warning: unused import: `UiNode`
 --> cases/ui_node/invalid_args.rs:1:37
  |
1 | use zero_ui::wgt_prelude::{ui_node, UiNode};
  |                                     ^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
